--- a/public/admin.html
+++ b/public/admin.html
@@ -9,21 +9,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
     <link rel="stylesheet" href="css/style_reg.css">
-    <script src="./script.js">
-    </script>
-
-    <title>Admin</title>
+<script src="./script.js"> </script>
+   
+    <title>Title</title>
 </head>
-
 <body>
     <form class="form_class">
         <div class="form-label">
-            <h5 id="fullname" class="fullname_post"></h5>
-            <h5 id="mail" class="email_post"></h5>
-
-        </div>
+            <h5 class="fullname_post"></h5>
+            <h5 class="email_post"></h5>
+         
+        </div>   
     </form>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
